GearsetPOC/force-app/main/default/objects/Train__c/Train__c.object-meta.xml
<CustomObject>
    <label>Train</label>
    <nameField>
        <label>Train ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>