GearsetPOC/force-app/main/default/objects/Train__c/fields/ACR_Reprocess_Count__c.field-meta.xml
<CustomField>
    <fullName>ACR_Reprocess_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>No of times the train reprocessed because of a change in the Additional Compensation Rule</inlineHelpText>
    <label>ACR Reprocess Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>