GearsetPOC/force-app/main/default/objects/Train__c/fields/Actual_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Arrival_Time__c</fullName>
    <description>The time the train actually arrived as opposed to the planned arrival time</description>
    <label>Actual Arrival Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>