GearsetPOC/force-app/main/default/objects/Train__c/fields/Actual_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Departure_Time__c</fullName>
    <description>The time the train actually departed</description>
    <label>Actual Departure Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>