GearsetPOC/force-app/main/default/objects/Train__c/fields/Additional_Compensation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compensation_Percentage__c</fullName>
    <description>This keeps a copy of the Compensation % defined in the Additional Compensation Rule Object. This copy is created to avoid the additional resource consumption and locking while processing compensation. This field should not be editable by an end user</description>
    <label>Additional_Compensation_Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>