GearsetPOC/force-app/main/default/objects/Train__c/fields/Additional_Compensation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compensation_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Additional Compensation Rule</label>
    <referenceTo>Additional_Compensation_Rules__c</referenceTo>
    <relationshipLabel>Trains</relationshipLabel>
    <relationshipName>Trains</relationshipName>
    <type>Lookup</type>
</CustomField>