GearsetPOC/force-app/main/default/objects/Train__c/fields/Additional_PRR_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Additional_PRR_Percentage__c</fullName>
    <inlineHelpText>Additional % for PRR compensation</inlineHelpText>
    <label>Additional PRR Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>