GearsetPOC/force-app/main/default/objects/Train__c/fields/Allow_JrTrvller__c.field-meta.xml
<CustomField>
    <fullName>Allow_JrTrvller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow junior traveller in the train</description>
    <label>Allow_JrTrvller</label>
    <type>Checkbox</type>
</CustomField>