GearsetPOC/force-app/main/default/objects/Train__c/fields/Arrival_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Date_Time__c</fullName>
    <description>Train&#39;s scheduled arrival date and time</description>
    <inlineHelpText>Train&#39;s scheduled arrival date and time</inlineHelpText>
    <label>Scheduled Arrival Date/Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>