GearsetPOC/force-app/main/default/objects/Train__c/fields/Arrival_Time_juniorTraveller__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time_juniorTraveller__c</fullName>
    <description>For Junior Traveller booking</description>
    <label>Arrival Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>