GearsetPOC/force-app/main/default/objects/Train__c/fields/Batch_Re_Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Batch_Re_Run_Date_Time__c</fullName>
    <label>Batch Re Run Date/Time</label>
    <type>DateTime</type>
</CustomField>