GearsetPOC/force-app/main/default/objects/Train__c/fields/Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Train was cancelled</description>
    <label>Cancelled</label>
    <type>Checkbox</type>
</CustomField>