GearsetPOC/force-app/main/default/objects/Train__c/fields/CB__c.field-meta.xml
<CustomField>
    <fullName>CB__c</fullName>
    <label>CB%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>