GearsetPOC/force-app/main/default/objects/Train__c/fields/CBE__c.field-meta.xml
<CustomField>
    <fullName>CBE__c</fullName>
    <label>CBE%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>