GearsetPOC/force-app/main/default/objects/Train__c/fields/CC__c.field-meta.xml
<CustomField>
    <fullName>CC__c</fullName>
    <label>CC%</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>