GearsetPOC/force-app/main/default/objects/Train__c/fields/Comments_Added__c.field-meta.xml
<CustomField>
    <fullName>Comments_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comments Added</label>
    <type>Checkbox</type>
</CustomField>