GearsetPOC/force-app/main/default/objects/Train__c/fields/Commercial_Gesture_Eligible_Flag__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Gesture_Eligible_Flag__c</fullName>
    <formula>IF(
NOT(OR(ISBLANK(PP_Commercial_Gesture__c), PP_Commercial_Gesture__c == 0))
,
IMAGE(&quot; /resource/WarningImage&quot;, &#39;warningImage&#39;) ,
&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Gesture Eligible Flag</label>
    <type>Text</type>
</CustomField>