GearsetPOC/force-app/main/default/objects/Train__c/fields/Compensation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Reason__c</fullName>
    <inlineHelpText>Explanation of why additional compensation is being applied at train and/or carriage level</inlineHelpText>
    <label>Justification for additional comps</label>
    <type>TextArea</type>
</CustomField>