GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Actor__c.field-meta.xml
<CustomField>
    <fullName>Delay_Actor__c</fullName>
    <label>Delay Actor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>