GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Cause__c.field-meta.xml
<CustomField>
    <fullName>Delay_Cause__c</fullName>
    <label>Delay Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>