GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Cause_Explain__c.field-meta.xml
<CustomField>
    <fullName>Delay_Cause_Explain__c</fullName>
    <label>Delay Cause Explain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>