GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Compensation_Increase_Flag__c.field-meta.xml
<CustomField>
    <fullName>Delay_Compensation_Increase_Flag__c</fullName>
    <formula>IF(
  OR(NOT(OR(ISBLANK(Destination_Cash__c),Destination_Cash__c == 0)),NOT(OR(ISBLANK(Destination_Voucher__c ),Destination_Voucher__c == 0 )),NOT(OR(ISBLANK(PP_Compensation_increase__c),PP_Compensation_increase__c == 0 )))
,  
IMAGE(&quot; /resource/MoneyImage&quot;, &#39;moneyImage&#39;) ,
 &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay Compensation Increase Flag</label>
    <type>Text</type>
</CustomField>