GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Imputation__c.field-meta.xml
<CustomField>
    <fullName>Delay_Imputation__c</fullName>
    <label>Delay Imputation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>