GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Delay_in_Minutes__c</fullName>
    <description>The train delay in minutes</description>
    <label>Delay (mins)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>