GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Mins_Train_Expert__c.field-meta.xml
<CustomField>
    <fullName>Delay_Mins_Train_Expert__c</fullName>
    <label>Delay Mins (Train Expert)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>