GearsetPOC/force-app/main/default/objects/Train__c/fields/Delay_Minutes_Major_Cause__c.field-meta.xml
<CustomField>
    <fullName>Delay_Minutes_Major_Cause__c</fullName>
    <label>Delay Major Cause (mins)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>