GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_Commercial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Departure_Commercial_Reason__c</fullName>
    <label>Departure Commercial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>