GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date__c</fullName>
    <formula>DATEVALUE(Departure_Date_Time_Format__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Date (formatted)</label>
    <type>Date</type>
</CustomField>