GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time__c</fullName>
    <description>Train&#39;s Scheduled departure date and time</description>
    <inlineHelpText>Train&#39;s Scheduled departure date and time</inlineHelpText>
    <label>Departure DateTime</label>
    <length>28</length>
    <required>true</required>
    <type>Text</type>
</CustomField>