GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_Date_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>Departure_Date_Time_Format__c</fullName>
    <description>Similar to that same field on the Ticket, issues with Timezones.</description>
    <formula>DATETIMEVALUE(MID(Name,8,19))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure DateTime (do not use)</label>
    <type>DateTime</type>
</CustomField>