GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_day__c.field-meta.xml
<CustomField>
    <fullName>Departure_day__c</fullName>
    <formula>CASE( MOD( DATEVALUE(Departure_Date_Time_Format__c) - DATE(1900, 1, 7), 7), 0, &quot;0 Sunday&quot;, 1, &quot;1 Monday&quot;, 2, &quot;2 Tuesday&quot;, 3,
&quot;3 Wednesday&quot;, 4, &quot;4 Thursday&quot;, 5, &quot;5 Friday&quot;, 6, &quot;6 Saturday&quot;,&quot;Error&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure_day</label>
    <type>Text</type>
</CustomField>