GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <formula>VALUE (MID ( TEXT (Departure_Date_Time_Format__c), 12, 2)) * 100 + VALUE (MID ( TEXT (Departure_Date_Time_Format__c), 15, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departure Time (formatted)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>