GearsetPOC/force-app/main/default/objects/Train__c/fields/Departure_Time_juniorTraveller__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time_juniorTraveller__c</fullName>
    <description>For Junior Trvaller Booking</description>
    <label>Departure Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>