GearsetPOC/force-app/main/default/objects/Train__c/fields/Destination_Cash__c.field-meta.xml
<CustomField>
    <fullName>Destination_Cash__c</fullName>
    <label>Destination % Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>