GearsetPOC/force-app/main/default/objects/Train__c/fields/Destination_Commercial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Destination_Commercial_Reason__c</fullName>
    <label>Destination Commercial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>