GearsetPOC/force-app/main/default/objects/Train__c/fields/Destination_Force_Majeure__c.field-meta.xml
<CustomField>
    <fullName>Destination_Force_Majeure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destination Force Majeure</label>
    <type>Checkbox</type>
</CustomField>