GearsetPOC/force-app/main/default/objects/Train__c/fields/Destination_Not_Served__c.field-meta.xml
<CustomField>
    <fullName>Destination_Not_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destination Not Served</label>
    <type>Checkbox</type>
</CustomField>