GearsetPOC/force-app/main/default/objects/Train__c/fields/Destination_Train_Comment__c.field-meta.xml
<CustomField>
    <fullName>Destination_Train_Comment__c</fullName>
    <label>Destination Train Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>