GearsetPOC/force-app/main/default/objects/Train__c/fields/Destination_Voucher__c.field-meta.xml
<CustomField>
    <fullName>Destination_Voucher__c</fullName>
    <label>Destination % Voucher</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>