GearsetPOC/force-app/main/default/objects/Train__c/fields/Disrupted_Offer_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Disrupted_Offer_Hotel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick to offer hotels to disrupted passengers.</description>
    <inlineHelpText>Tick to offer hotels to disrupted passengers.</inlineHelpText>
    <label>Disrupted Offer Hotel</label>
    <type>Checkbox</type>
</CustomField>