GearsetPOC/force-app/main/default/objects/Train__c/fields/Disrupted_Offer_Taxi__c.field-meta.xml
<CustomField>
    <fullName>Disrupted_Offer_Taxi__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tick to offer taxis to disrupted passengers.</description>
    <inlineHelpText>Tick to offer taxis to disrupted passengers.</inlineHelpText>
    <label>Disrupted Offer Taxi</label>
    <type>Checkbox</type>
</CustomField>