GearsetPOC/force-app/main/default/objects/Train__c/fields/Disruption_Termination_Station__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Termination_Station__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Station disrupted train is now due to arrive at.</description>
    <inlineHelpText>Station disrupted train is now due to arrive at.</inlineHelpText>
    <label>Disruption Termination Station</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Trains (Disruption Termination Station)</relationshipLabel>
    <relationshipName>Trains</relationshipName>
    <type>Lookup</type>
</CustomField>