GearsetPOC/force-app/main/default/objects/Train__c/fields/Disruption_Type__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Type__c</fullName>
    <description>Indicates what kind of disruption a train is suffering.</description>
    <inlineHelpText>Indicates what kind of disruption a train is suffering.</inlineHelpText>
    <label>Disruption Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>