GearsetPOC/force-app/main/default/objects/Train__c/fields/Equipment_Code__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Code__c</fullName>
    <label>Equipment Code</label>
    <length>28</length>
    <type>Text</type>
</CustomField>