GearsetPOC/force-app/main/default/objects/Train__c/fields/Exempt_from_Auto_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Exempt_from_Auto_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exempt from Auto Compensation</label>
    <type>Checkbox</type>
</CustomField>