GearsetPOC/force-app/main/default/objects/Train__c/fields/Force_Majeure__c.field-meta.xml
<CustomField>
    <fullName>Force_Majeure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Majeure</label>
    <type>Checkbox</type>
</CustomField>