GearsetPOC/force-app/main/default/objects/Train__c/fields/FPU_Avail_Train_Id__c.field-meta.xml
<CustomField>
    <fullName>FPU_Avail_Train_Id__c</fullName>
    <formula>LEFT(  Name , 17)</formula>
    <label>FPU_Avail_Train_Id</label>
    <type>Text</type>
</CustomField>