GearsetPOC/force-app/main/default/objects/Train__c/fields/FPU_Availability__c.field-meta.xml
<CustomField>
    <fullName>FPU_Availability__c</fullName>
    <description>Number of seats available for Fixed Price Upgrade.</description>
    <label>FPU Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>