GearsetPOC/force-app/main/default/objects/Train__c/fields/FPU_Live_Availability_del__c.field-meta.xml
<CustomField>
    <fullName>FPU_Live_Availability_del__c</fullName>
    <description>Fixed Price Upgrades left to be redeemed.</description>
    <formula>FPU_Availability__c - Redeemed_FPUs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPU Live Availability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>