GearsetPOC/force-app/main/default/objects/Train__c/fields/FPU_Redemption_del__c.field-meta.xml
<CustomField>
    <fullName>FPU_Redemption_del__c</fullName>
    <formula>FPU_Availability__c - FPU_Live_Availability_del__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FPU Redemption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>