GearsetPOC/force-app/main/default/objects/Train__c/fields/FPU_Train_Category__c.field-meta.xml
<CustomField>
    <fullName>FPU_Train_Category__c</fullName>
    <description>Fixed Price Upgrade category used to determine the FPU cost.</description>
    <label>FPU Train Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>