GearsetPOC/force-app/main/default/objects/Train__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Train departure&#39;s station</description>
    <inlineHelpText>Train departure&#39;s station</inlineHelpText>
    <label>From</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Trains (From)</relationshipLabel>
    <relationshipName>Trains_From</relationshipName>
    <type>Lookup</type>
</CustomField>