GearsetPOC/force-app/main/default/objects/Train__c/fields/Global_Delay_Reason_Train_Expert__c.field-meta.xml
<CustomField>
    <fullName>Global_Delay_Reason_Train_Expert__c</fullName>
    <label>Global Delay Reason Train Expert</label>
    <length>255</length>
    <type>Text</type>
</CustomField>