GearsetPOC/force-app/main/default/objects/Train__c/fields/Incidents__c.field-meta.xml
<CustomField>
    <fullName>Incidents__c</fullName>
    <description>Count of the number of incidents related to the train.</description>
    <inlineHelpText>Count of the number of incidents related to the train.</inlineHelpText>
    <label>Incidents</label>
    <summaryForeignKey>Incidents__c.Train__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>