GearsetPOC/force-app/main/default/objects/Train__c/fields/Number_of_Passengers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passengers__c</fullName>
    <label>Number of Passengers</label>
    <summaryFilterItems>
        <field>Ticket__c.Cancelled_By_Customer__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket__c.Train__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>