GearsetPOC/force-app/main/default/objects/Train__c/fields/Origin_Not_Served__c.field-meta.xml
<CustomField>
    <fullName>Origin_Not_Served__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Origin Not Served</label>
    <type>Checkbox</type>
</CustomField>