GearsetPOC/force-app/main/default/objects/Train__c/fields/PP_Commercial_Gesture__c.field-meta.xml
<CustomField>
    <fullName>PP_Commercial_Gesture__c</fullName>
    <label>#PP Commercial Gesture</label>
    <summarizedField>Passing_Point__c.Commercial_Gesture__c</summarizedField>
    <summaryForeignKey>Passing_Point__c.Train__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>