GearsetPOC/force-app/main/default/objects/Train__c/fields/PP_Compensation_increase__c.field-meta.xml
<CustomField>
    <fullName>PP_Compensation_increase__c</fullName>
    <label>#PP Compensation increase</label>
    <summarizedField>Passing_Point__c.Compensation_increase__c</summarizedField>
    <summaryForeignKey>Passing_Point__c.Train__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>