GearsetPOC/force-app/main/default/objects/Train__c/fields/Pre_Travel_Rule__c.field-meta.xml
<CustomField>
    <fullName>Pre_Travel_Rule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to the Pre-TRavel compensation rule</description>
    <inlineHelpText>This is a reference to the pre-travel  evoucher rule applicable to this train</inlineHelpText>
    <label>Pre-Travel Rule</label>
    <referenceTo>Additional_Compensation_Rules__c</referenceTo>
    <relationshipLabel>Trains (Pre-Travel Rule)</relationshipLabel>
    <relationshipName>PreTravelTrains</relationshipName>
    <type>Lookup</type>
</CustomField>