GearsetPOC/force-app/main/default/objects/Train__c/fields/Redeemed_FPUs__c.field-meta.xml
<CustomField>
    <fullName>Redeemed_FPUs__c</fullName>
    <description>Total of redeemed Fixed Price Upgrades on this train.</description>
    <label>Redeemed_FPUs</label>
    <summaryFilterItems>
        <field>Ticket__c.FPU_Redemption__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Ticket__c.Train__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>