GearsetPOC/force-app/main/default/objects/Train__c/fields/S3_Train_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>S3_Train_Service_Id__c</fullName>
    <externalId>true</externalId>
    <label>S3 Train Service Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>