GearsetPOC/force-app/main/default/objects/Train__c/fields/Scheduled_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Arrival__c</fullName>
    <description>Train&#39;s scheduled arrival date and time</description>
    <inlineHelpText>Train&#39;s scheduled arrival date and time</inlineHelpText>
    <label>Scheduled Arrival</label>
    <length>40</length>
    <type>Text</type>
</CustomField>