GearsetPOC/force-app/main/default/objects/Train__c/fields/Service_Compensation_Information__c.field-meta.xml
<CustomField>
    <fullName>Service_Compensation_Information__c</fullName>
    <inlineHelpText>Details of air con, catering or de-training compensation applicable on train/coach</inlineHelpText>
    <label>Service Compensation Information</label>
    <type>TextArea</type>
</CustomField>