GearsetPOC/force-app/main/default/objects/Train__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Train arrival&#39;s station</description>
    <inlineHelpText>Train arrival&#39;s station</inlineHelpText>
    <label>To</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Trains (To)</relationshipLabel>
    <relationshipName>Trains_To</relationshipName>
    <type>Lookup</type>
</CustomField>