GearsetPOC/force-app/main/default/objects/Train__c/fields/Train_Departure_Date__c.field-meta.xml
<CustomField>
    <fullName>Train_Departure_Date__c</fullName>
    <description>This give the date part od Departure Date Time files as a date data type.. Can be used as filter in queries</description>
    <formula>DATEVALUE( MID( Departure_Date_Time__c , 7,4)+&quot;-&quot;+MID( Departure_Date_Time__c , 4,2) + &quot;-&quot; + MID( Departure_Date_Time__c , 1,2)  )</formula>
    <label>Train Departure_Date</label>
    <type>Date</type>
</CustomField>