GearsetPOC/force-app/main/default/objects/Train__c/fields/Train_description__c.field-meta.xml
<CustomField>
    <fullName>Train_description__c</fullName>
    <formula>&quot;(&quot; +  LEFT(RIGHT(TEXT(Departure_Date_Time_Format__c),9),5)  + &quot;) &quot; + Right(Train_Number__c,4)

/* Old Description
Train_Number__c + &quot; from &quot; + From__r.Name + &quot; (&quot; +  LEFT(RIGHT(TEXT(Departure_Date_Time_Format__c),9),5)  + &quot;) &quot; + &quot;To &quot; + To__r.Name + &quot; (&quot; + Equipment_Code__c + &quot;)&quot;
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Train Description</label>
    <type>Text</type>
</CustomField>