GearsetPOC/force-app/main/default/objects/Train__c/fields/Train_Expert__c.field-meta.xml
<CustomField>
    <fullName>Train_Expert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that filled Delay Mins (Train Expert) field.</description>
    <inlineHelpText>User that filled Delay Mins (Train Expert) field.</inlineHelpText>
    <label>Train Expert</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trains</relationshipName>
    <type>Lookup</type>
</CustomField>