GearsetPOC/force-app/main/default/objects/Train__c/fields/Train_handled_by_Auto_Compensation__c.field-meta.xml
<CustomField>
    <fullName>Train_handled_by_Auto_Compensation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Train handled by Auto Compensation</label>
    <type>Checkbox</type>
</CustomField>