GearsetPOC/force-app/main/default/objects/Train__c/fields/Train_Number__c.field-meta.xml
<CustomField>
    <fullName>Train_Number__c</fullName>
    <description>ID number of the train</description>
    <inlineHelpText>ID number of the train</inlineHelpText>
    <label>Train Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>