GearsetPOC/force-app/main/default/objects/Train__c/fields/UIC_From__c.field-meta.xml
<CustomField>
    <fullName>UIC_From__c</fullName>
    <label>UIC From</label>
    <length>10</length>
    <type>Text</type>
</CustomField>