GearsetPOC/force-app/main/default/objects/Train__c/fields/UIC_To__c.field-meta.xml
<CustomField>
    <fullName>UIC_To__c</fullName>
    <label>UIC To</label>
    <length>10</length>
    <type>Text</type>
</CustomField>