GearsetPOC/force-app/main/default/objects/Train__c/listViews/All_Disrupted_Trains.listView-meta.xml
<ListView>
    <fullName>All_Disrupted_Trains</fullName>
    <booleanFilter>(1 OR 2 OR 3 OR 4) AND 5</booleanFilter>
    <columns>Departure_Date_Time_Format__c</columns>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Equipment_Code__c</columns>
    <columns>Cancelled__c</columns>
    <columns>Incidents__c</columns>
    <columns>On_Time__c</columns>
    <columns>Delay_in_Minutes__c</columns>
    <columns>Delay_Actor__c</columns>
    <columns>Delay_Cause__c</columns>
    <columns>Delay_Cause_Explain__c</columns>
    <columns>Compensation_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Delay_in_Minutes__c</field>
        <operation>greaterOrEqual</operation>
        <value>60</value>
    </filters>
    <filters>
        <field>Cancelled__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Compensation_Reason__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Incidents__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Departure_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:365</value>
    </filters>
    <label>All Disrupted Trains</label>
    <language>en_US</language>
</ListView>