GearsetPOC/force-app/main/default/objects/Train__c/listViews/All_Special_Trains_Ski_Disney_LSoF.listView-meta.xml
<ListView>
    <fullName>All_Special_Trains_Ski_Disney_LSoF</fullName>
    <columns>Departure_Date_Time_Format__c</columns>
    <columns>NAME</columns>
    <columns>Train_Number__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Equipment_Code__c</columns>
    <columns>Cancelled__c</columns>
    <columns>Incidents__c</columns>
    <columns>On_Time__c</columns>
    <columns>Delay_in_Minutes__c</columns>
    <columns>Compensation_Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departure_Date_Time_Format__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:80</value>
    </filters>
    <filters>
        <field>Train_Number__c</field>
        <operation>contains</operation>
        <value>9092,9095,9096,9099,9084,9087,9074,9057</value>
    </filters>
    <label>All Special Trains (Ski, Disney, LSoF)</label>
    <language>en_US</language>
</ListView>