GearsetPOC/force-app/main/default/objects/Train__c/listViews/All_Trains.listView-meta.xml
<ListView>
    <fullName>All_Trains</fullName>
    <columns>Departure_Date_Time_Format__c</columns>
    <columns>NAME</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Equipment_Code__c</columns>
    <columns>Cancelled__c</columns>
    <columns>Incidents__c</columns>
    <columns>On_Time__c</columns>
    <columns>Delay_in_Minutes__c</columns>
    <columns>Compensation_Reason__c</columns>
    <columns>Delay_Actor__c</columns>
    <columns>Delay_Cause__c</columns>
    <columns>Delay_Cause_Explain__c</columns>
    <columns>Delay_Imputation__c</columns>
    <columns>Delay_Minutes_Major_Cause__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Departure_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>All Trains (Last 30 Days)</label>
</ListView>