GearsetPOC/force-app/main/default/objects/Train__c/listViews/Frequent_Traveller_Redemptions_Train.listView-meta.xml
<ListView>
    <fullName>Frequent_Traveller_Redemptions_Train</fullName>
    <filterScope>Queue</filterScope>
    <label>Frequent Traveller Redemptions</label>
    <queue>Frequent_Traveller_Redemptions</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>